added new countries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,9 @@ emission.defaultFactors.fuel.natural-gas=2.75
 emission.regionFactors.us.electricity=0.82
 emission.regionFactors.eu.electricity=0.276
 emission.regionFactors.asia.electricity=0.723
+
+#added by thu thu win for more specific calculation and enterprise levels ,these countries has their significant ones since they focus on one specific source
+emission.regionFactors.fr.electricity=0.044
+emission.regionFactors.de.electricity=0.366
+emission.regionFactors.cn.electricity=0.681
+emission.regionFactors.in.electricity=0.715
