--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,44 @@
 spring.application.name=greenSuiteTest
 server.port=8080
 
+# Ollama Configuration
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.options.model=gemma:3b-e4
+spring.ai.ollama.embedding.options.model=mxbai-embed-large
+spring.ai.ollama.chat.options.temperature=0.7
+spring.ai.ollama.chat.options.num-ctx=4096
+
+# Disable conflicting autoconfiguration
+spring.autoconfigure.exclude=org.springframework.ai.vectorstore.mongodb.autoconfigure.MongoDBAtlasVectorStoreAutoConfiguration
+
+# Vector Store
+spring.ai.vectorstore.mongodb.initialize-schema=true
+spring.ai.vectorstore.mongodb.collection-name=green_suite_vectors
+spring.ai.vectorstore.mongodb.index-name=vector_index
+spring.ai.vectorstore.mongodb.path-name=embedding
+spring.ai.vectorstore.mongodb.metadata-fields-to-filter=source,page
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite;
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+
+# JDBC Chat Memory - Disabled auto-configuration, using custom config
+# spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+# spring.ai.chat.memory.repository.jdbc.platform=postgresql
+
+# MongoDB Atlas for Vector Store
+spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.reg096x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.ai.vectorstore.mongodb.atlas.database=green_suite_vectors
+
 # ===== DATABASE CONFIGURATION =====
 spring.data.mongodb.uri=mongodb://localhost:27017/mongoGreenSuite
+spring.data.mongodb.database=mongoGreenSuite
 spring.data.mongodb.auto-index-creation=true
 
 # ===== JWT SECURITY ===== (Development defaults)
@@ -18,10 +54,22 @@ app.rate.timeout-ms=60000
 # ===== CORS CONFIGURATION =====
 app.cors.allowed-origins=http://localhost:3000
 
-# ===== LOGGING CONFIGURATION =====
+# ===== LOGGING =====
 logging.level.root=INFO
-logging.level.org.springframework.security=WARN
+logging.level.org.springframework=INFO
 logging.level.com.app.greensuitetest=DEBUG
+logging.file.name=logs/application.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=2000ms
+
+# Redis Connection Pool Settings
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
 
 # ===== SECURITY HARDENING =====
 server.error.include-message=never
