ai-chatbot-configured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,17 @@ server.port=8080
 
 # Ollama Configuration
 spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=gemma:3b-e4
-spring.ai.ollama.embedding.options.model=mxbai-embed-large
-spring.ai.ollama.chat.options.temperature=0.7
-spring.ai.ollama.chat.options.num-ctx=4096
+spring.ai.ollama.chat.options.model=gemma3:4b
+spring.ai.ollama.embedding.options.model=nomic-embed-text:latest
+# Enhanced model options for better performance
+spring.ai.ollama.chat.options.temperature=0.3
+spring.ai.ollama.chat.options.top-p=0.9
+spring.ai.ollama.chat.options.top-k=40
+spring.ai.ollama.chat.options.num-ctx=8192
+spring.ai.ollama.chat.options.num-predict=1500
+spring.ai.ollama.chat.options.repeat-penalty=1.1
+spring.ai.ollama.chat.options.presence-penalty=0.1
+spring.ai.ollama.chat.options.frequency-penalty=0.1
 
 # Disable conflicting autoconfiguration
 spring.autoconfigure.exclude=org.springframework.ai.vectorstore.mongodb.autoconfigure.MongoDBAtlasVectorStoreAutoConfiguration
@@ -17,6 +24,10 @@ spring.ai.vectorstore.mongodb.collection-name=green_suite_vectors
 spring.ai.vectorstore.mongodb.index-name=vector_index
 spring.ai.vectorstore.mongodb.path-name=embedding
 spring.ai.vectorstore.mongodb.metadata-fields-to-filter=source,page
+
+# Document Ingestion Configuration
+app.document.ingestion.enabled=true
+app.document.ingestion.force-reingest=false
 
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite;
