--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,18 @@ spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.options.model=gemma3:4b
 spring.ai.ollama.embedding.options.model=nomic-embed-text:latest
 # Enhanced model options for better performance
-spring.ai.ollama.chat.options.temperature=0.3
+spring.ai.ollama.chat.options.temperature=0.4
 spring.ai.ollama.chat.options.top-p=0.9
 spring.ai.ollama.chat.options.top-k=40
-spring.ai.ollama.chat.options.num-ctx=8192
-spring.ai.ollama.chat.options.num-predict=1500
+spring.ai.ollama.chat.options.num-ctx=12288
+spring.ai.ollama.chat.options.num-predict=2000
 spring.ai.ollama.chat.options.repeat-penalty=1.1
 spring.ai.ollama.chat.options.presence-penalty=0.1
 spring.ai.ollama.chat.options.frequency-penalty=0.1
+
+# Document Processing for Intelligence
+app.document.ingestion.chunk-size=1200
+app.document.ingestion.chunk-overlap=300
 
 # Disable conflicting autoconfiguration
 spring.autoconfigure.exclude=org.springframework.ai.vectorstore.mongodb.autoconfigure.MongoDBAtlasVectorStoreAutoConfiguration
