performance optimized and ai fix and credit system still implementing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,18 @@ spring.ai.ollama.chat.options.repeat-penalty=1.1
 spring.ai.ollama.chat.options.presence-penalty=0.1
 spring.ai.ollama.chat.options.frequency-penalty=0.1
 
+# AI Service Timeout and Retry Configuration
+spring.ai.ollama.client.timeout=30s
+spring.ai.ollama.client.connect-timeout=10s
+spring.ai.retry.max-attempts=3
+spring.ai.retry.initial-interval=1s
+spring.ai.retry.multiplier=2.0
+spring.ai.retry.max-interval=10s
+
+# Fallback AI Configuration (when Ollama is unavailable)
+spring.ai.fallback.enabled=true
+spring.ai.fallback.response="I'm currently experiencing technical difficulties. Please try again later or contact support."
+
 # Document Processing for Intelligence
 app.document.ingestion.chunk-size=1200
 app.document.ingestion.chunk-overlap=300
@@ -39,8 +51,21 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
 spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=900000
+spring.datasource.hikari.leak-detection-threshold=300000
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.keepalive-time=300000
 spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 
 # JDBC Chat Memory - Disabled auto-configuration, using custom config
@@ -82,9 +107,23 @@ spring.data.redis.port=6379
 spring.data.redis.timeout=2000ms
 
 # Redis Connection Pool Settings
-spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-active=16
 spring.data.redis.jedis.pool.max-idle=8
-spring.data.redis.jedis.pool.min-idle=0
+spring.data.redis.jedis.pool.min-idle=2
+
+# Redis Performance Optimization
+spring.data.redis.timeout=5000ms
+spring.data.redis.lettuce.pool.max-active=16
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=2
+spring.data.redis.lettuce.pool.max-wait=2000ms
+
+# ===== SERVER PERFORMANCE OPTIMIZATION =====
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=10
+server.tomcat.max-connections=8192
+server.tomcat.accept-count=100
+server.tomcat.connection-timeout=20000
 
 # ===== SECURITY HARDENING =====
 server.error.include-message=never
