--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,7 +50,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite;
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
@@ -142,6 +142,8 @@ features.enterprise=${features.premium},dedicated-support,custom-integrations,ad
 # ===== SECURITY RECOVERY SETTINGS =====
 app.security.max-recovery-attempts=3
 app.security.recovery-lock-minutes=15
+
+
 
 
 # Base Emission Factors (kgCO2e per unit)
