--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ app.document.ingestion.enabled=true
 app.document.ingestion.force-reingest=false
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite;
+spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -73,7 +73,8 @@ spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 # spring.ai.chat.memory.repository.jdbc.platform=postgresql
 
 # MongoDB Atlas for Vector Store
-spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.reg096x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.reg096x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.lvi8e0d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.ai.vectorstore.mongodb.atlas.database=green_suite_vectors
 
 # ===== DATABASE CONFIGURATION =====
