--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,8 @@ app.document.ingestion.force-reingest=false
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=2982003
+#use your own password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.batch_size=20
@@ -74,7 +75,10 @@ spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 
 # MongoDB Atlas for Vector Store
 #spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.reg096x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.lvi8e0d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+spring.ai.vectorstore.mongodb.atlas.uri=mongodb+srv://root:admin@cluster0.x4nrisn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#this is thu's mongodbatlas
+
 spring.ai.vectorstore.mongodb.atlas.database=green_suite_vectors
 
 # ===== DATABASE CONFIGURATION =====
