uncommented companyid in auth.do fix nav bar connecing carbon and goal pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,7 +97,7 @@ app.rate.limit=10
 app.rate.timeout-ms=60000
 
 # ===== CORS CONFIGURATION =====
-app.cors.allowed-origins=http://localhost:3000
+app.cors.allowed-origins=http://localhost:3000,http://localhost:3001
 
 # ===== LOGGING =====
 logging.level.root=INFO
