conifg login register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,11 +46,11 @@ app.document.ingestion.enabled=true
 app.document.ingestion.force-reingest=false
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/chat_memory_greensuite;
+spring.datasource.url=jdbc:postgresql://localhost:5432/greensuite_postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
